fix overflow on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,8 @@ body {
   background: var(--bg);
 
   overflow-x: hidden;
+  height: 100%;
+  /* width: 100%; */
 }
 
 .crane-logo {
